--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </div>
             <script>
                 var index = 3;
-                var imageList = document.queryselectorALL(".img-container-hide");
+                var imageList = document.querySelectorAll(".img-container-hide");
                 imageList[0].setAttribute("class", "img-container-show");
                 // event handler
                 function changepic() {
@@ -510,6 +510,7 @@
                         <input id="lists" type="button" value="List current reservations">
                     </p>
                 </form>
+                <p id="listofbooking"></p>
                 <script src="js/hotel.js"></script>
             </div>
 
